option('developer-mode',
  type : 'boolean',
  value : false,
  description : 'Activates debug code, tests and loads some resources from the source tree'
)

option('flatpak',
  type : 'boolean',
  value : false,
  description : 'True for the flatpak build'
)

option('lcms2',
  type : 'boolean',
  value : true,
  description : 'Use lcms2 to get color management support'
)

option('colord',
  type : 'boolean',
  value : true,
  description : 'Use colord to read the monitor color profile'
)

option('libwebp',
  type : 'boolean',
  value : true,
  description : 'Use libwebp to load WebP images'
)

option('librsvg',
  type : 'boolean',
  value : true,
  description : 'Use librsvg to load SVG images'
)

option('gstreamer',
  type : 'boolean',
  value : true,
  description : 'Use gstreamer to play multimedia files and to view the metadata'
)

option('exiv2',
  type : 'boolean',
  value : true,
  description : 'Use exiv2 to read and write metadata'
)

option('libheif',
  type : 'boolean',
  value : true,
  description : 'Use libheif to load HEIF and AVIF images'
)

option('libjxl',
  type : 'boolean',
  value : true,
  description : 'Use libjxl to load JPEG XL images'
)

option('libtiff',
  type : 'boolean',
  value : true,
  description : 'Use libtiff to load Tiff images'
)
