option('developer-mode',
  type : 'boolean',
  value : false,
  description : 'Activates debug code, compiles tests and loads some resources from the source tree'
)

option('flatpak-build',
  type : 'boolean',
  value : false,
  description : 'True for the flatpak build'
)

option('colord',
  type : 'boolean',
  value : true,
  description : 'Use colord to read the monitor color profile'
)

option('libwebp',
  type : 'boolean',
  value : true,
  description : 'Use libwebp to load WebP images'
)

option('librsvg',
  type : 'boolean',
  value : true,
  description : 'Use librsvg to load SVG images'
)

option('libheif',
  type : 'boolean',
  value : true,
  description : 'Use libheif to load HEIF and AVIF images'
)

option('libjxl',
  type : 'boolean',
  value : true,
  description : 'Use libjxl to load JPEG XL images'
)

option('libtiff',
  type : 'boolean',
  value : true,
  description : 'Use libtiff to load Tiff images'
)

option('libgif',
  type : 'boolean',
  value : true,
  description : 'Use libgif to load GIF images'
)
