subdir('Bookmarks')
subdir('Catalogs')
subdir('Comments')
subdir('DesktopBackground')
subdir('Editor')
subdir('Exiv2')
subdir('FileManager')
subdir('Filters')
subdir('Image')
subdir('Metadata')
subdir('Preferences')
subdir('Rename')
subdir('Savers')
subdir('Scripts')
subdir('Search')
subdir('Selections')
subdir('Shortcuts')
subdir('Template')
subdir('Tools')
subdir('Video')
